--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ header {
 .head-container {
   width: 100%;
   height: 700px;
-  background-image: url("logo/logo/bgk-header.png");
+  background-image: url("img/bgk-header.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center top;
@@ -638,7 +638,7 @@ a:hover {
 /******** Section 2 ************/
 
 .section-2-container {
-  background-image: url("logo/logo/bgk-middle.png");
+  background-image: url("img/bgk-middle.png");
   width: 100%;
   height: 700px;
   background-size: cover;
@@ -872,7 +872,7 @@ a:hover {
 
 
 .sec-5-background {
-  background-image: url(logo/logo/pic-replace.jpg);
+  background-image: url(img/pic-replace.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -1406,7 +1406,7 @@ padding-bottom: 20px;
 
 footer {
   width: 100%;
-  background-image: url(logo/logo/bgk-footer.png);
+  background-image: url(img/bgk-footer.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
