--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ header {
 .nav a {
   color: #fff;
   text-decoration: none;
-  font-size: 12px;
+  font-size: 14px;
   font-weight: 700;
 }
 
@@ -633,6 +633,7 @@ a:hover {
   color: #fff;
   background-color: rgb(55, 224, 247);
   border: 1px solid  rgb(55, 224, 247);
+  box-shadow: 2px 3px 5px 0 rgba(0, 0, 0, 0.20);
 }
 
 /******** Section 2 ************/
@@ -1415,7 +1416,7 @@ cursor: pointer;
 #submit:hover {
   background-color: rgb(26, 216, 250);
   color: #fff;
-  border: 1px solid #fff;
+  border: 1px solid rgb(26, 216, 250);
   transition: 0.2s;
   box-shadow: 2px 3px 5px 0 rgba(0, 0, 0, 0.20);
 }
@@ -1470,7 +1471,7 @@ footer {
 .footer-p {
   color: #fff;
   font-size: 13px;
-  padding-left: 5px;
+  padding-left: 10px;
 }
 
 
@@ -1498,13 +1499,13 @@ footer {
 
 .footer-h3-2 {
   padding-bottom: 50px;
-  font-size: 16px;
+  font-size: 18px;
   color: #fff;
 }
 
 .sub-h4 {
   position: relative;
-  bottom: 23px;
+  bottom: 20px;
   color: #fff;
 }
 
@@ -1515,7 +1516,7 @@ footer {
 
 .footer-div-3-flex {
   display: flex;
-  padding: 20px;
+  padding-top: 20px;
 }
 
 
@@ -1536,7 +1537,7 @@ footer {
 }
 
 .paper:hover {
-  background-color: rgb(26, 216, 250);
+  background-color:  rgb(151, 231, 245);
 }
 
 
@@ -1553,6 +1554,7 @@ footer {
 #footer-submit:hover {
   background-color: rgba(255, 255, 255, 0.281);
   transition: 0.4s;
+  
 }
 
 .site-hov:hover {
@@ -1572,7 +1574,7 @@ footer {
   width: 100%;
   display: grid;
   padding-bottom: 30px;
-  grid-template-columns: 34% 34%;
+  grid-template-columns: 30% 34%;
   justify-content: center;
   text-align: center;
 }
